# feetech-servo-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: accelerate_move.rs  calibrate.rs  get_info.rs  midi.rs  perlin.html  playback.rs  record_positions.rs  teleoperate.rs  websocket_read.rs  websockets.html  websockets.rs
src/: commands.rs  driver.rs  lib.rs  main.rs  packet_handler.rs  packets.rs  serial.rs  utils.rs
